Issue #8063: Call _PyGILState_Init() earlier in Py_InitializeEx().